# ExifMapOverlay

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
doc/: ToDos.md
src/: exifMapOverlay.py  staticmap_cache.py
src/exifMapOverlay/: __init__.py  __main__.py  emo.py  staticmap_cache.py
